# car_service

./: .dockerignore  .gitignore  docker-compose.yaml  install-poetry.py  manage.py  pyproject.toml  requirements.txt
.github/actions/run_tests/: action.yaml
.github/workflows/: docker-build.yaml  docker-build.yml
car_project/: settings.py  urls.py
ops/: Dockerfile
src/: asgi.py  settings.py  urls.py  wsgi.py
src/app/cars/: admin.py  models.py  serializers.py  urls.py  views.py
src/app/cars/migrations/: 0001_initial.py  0002_customers_alter_car_color_alter_car_year_and_more.py  0003_rename_customers_customer.py  0004_alter_car_color.py
src/app/cars/templates/: home.html
src/app/cars/tests/: test_models.py
