[project]
name = "car-service"
version = "0.1.0"
description = ""
authors = [
    {name = "whyevel", email = "whyevel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "asgiref==3.8.1",
    "django==5.1.5",
    "sqlparse==0.5.3",
    "tzdata==2025.1",
    "djangorestframework>=3.15.2,<4.0.0",
    "pytest>=8.3.4,<9.0.0",
    "ruff>=0.9.4,<0.10.0",
    "psycopg2-binary>=2.9.10,<3.0.0"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.settings"
python_files = ["test_*.py"]
django_find_project = true
addopts = "--tb=short"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pre-commit = "^4.1.0"
pytest-django = "^4.9.0"

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
